src/app/components/studio-clock/_index.scss
 .clock {
    width: 100px;
    height: 100px;
    position: relative;
    margin: 20px 0;

    .hour {
      width: 0;
      height: 0;
      position: absolute;
      top: 50%;
      left: 50%;
      margin: -1px 0 -2px -25%;
      padding: 1px 0 2px 25%;
      background: #fff;
      -webkit-transform-origin: 50% 100%;
      -ms-transform-origin: 50% 100%;
      transform-origin: 100% 50%;
      transform: rotate(90deg);
      transition: all 1.5s cubic-bezier(0.000, 0.700, 0.900, 1);
      -webkit-transition: all 1.5s cubic-bezier(0.000, 0.700, 0.900, 1);
      -ms-transition: all 1.5s cubic-bezier(0.000, 0.700, 0.900, 1);
      z-index: 30;
    }

    .minute {
      width: 0;
      height: 0;
      position: absolute;
      top: 50%;
      left: 50%;
      margin: -40% -1px 0;
      padding: 40% 1px 0;
      background: #fff;
      -webkit-transform-origin: 50% 100%;
      -ms-transform-origin: 50% 100%;
      transform-origin: 50% 100%;
      transition: all 1.5s cubic-bezier(0.000, 0.700, 0.900, 1);
      -webkit-transition: all 1.5s cubic-bezier(0.000, 0.700, 0.900, 1);
      -ms-transition: all 1.5s cubic-bezier(0.000, 0.700, 0.900, 1);
      z-index: 20;
    }

    .moon {
      height: 30px;
      width: 30px;
      top: 20%;
      left: 10%;
      position: absolute;
      z-index: 10;
      fill: $nonBlack;
    }

    &.set-to-twelve {
      .hour {
        transform: rotate(90deg) !important;
      }
      .minute {
        transform: rotate(0deg) !important;
      }
    }

    &:before {
      content: '';
      width: 2px;
      height: 2px;
      border-radius: 50%;
      position: absolute;
      left: 50%;
      bottom: 50%;
      background: #fff;
      margin-bottom: -1px;
      margin-left: -1px;
    }

  }

